pre-launch edits.

--- a/book.bib
+++ b/book.bib
@@ -336,6 +336,20 @@
 }
 
 
+@article{Dasilva2014,
+  author = {{Da silva}, In{\'{a}}cio C.M. and {Van Hees}, Vincent T. and Ramires, Virg{\'{i}}lio V. and Knuth, Alan G. and Bielemann, Renata M. and Ekelund, Ulf and Brage, Soren and Hallal, Pedro C.},
+  doi = {10.1093/ije/dyu203},
+  isbn = {0300-5771},
+  issn = {14643685},
+  journal = {International Journal of Epidemiology},
+  keywords = {Activity monitor,Cohort studies,Motor activity,Movement},
+  pmid = {25361583},
+  title = {{Physical activity levels in three Brazilian birth cohorts as assessed with raw triaxial wrist accelerometry}},
+  year = {2014}
+}
+
+
+
 @Book{Derogatis1994,
   title     = {{Symptom Checklist-90-R (SCL-90-R): Administration, scoring, and procedures manual}},
   publisher = {Minneapolis, MN: NCS Pearson},
@@ -1272,6 +1286,20 @@ year = {1999}
   year={2003},
   publisher={Sage Publications}
 }
+
+
+@article{Rowlands2016,
+  author = {Rowlands, Alex V. and Yates, Tom and Davies, Melanie and Khunti, Kamlesh and Edwardson, Charlotte L.},
+  doi = {10.1249/MSS.0000000000000978},
+  isbn = {0000000000000},
+  issn = {15300315},
+  journal = {Medicine and Science in Sports and Exercise},
+  keywords = {ActiGraph,GENEActiv,OPEN SOURCE,SLEEP,WRIST-WORN}, 
+  pmid = {27183118},
+  title = {{Raw Accelerometer Data Analysis with GGIR R-package: Does Accelerometer Brand Matter?}},
+  year = {2016}
+}
+
 
 @Article{ruf1999,
   title = {The Lomb-Scargle periodogram in biological rhythm research: Analysis of incomplete and unequally spaced time-series},
