--- a/activity.Rmd
+++ b/activity.Rmd
@@ -1,17 +1,130 @@
+```{r include=FALSE, cache=FALSE}
+# # Reproducability --------------------------------------------------------------
+# 
+# # fix random numbers
+# set.seed(1014)
+# 
+# 
+# # knitr chunk options ----------------------------------------------------------
+# 
+knitr::opts_chunk$set(
+  comment = "#>",
+  collapse = TRUE,
+  cache = FALSE,
+  out.width = "98%",
+  fig.align = 'center',
+  fig.width = 7,
+  fig.asp = 0.5,  # was: 0.618 (1 / phi)
+  fig.show = "hold",
+  message = FALSE,
+  warning = FALSE
+)
+# 
+# options(width = 120)
+# 
+# 
+# # standard libraries -----------------------------------------------------------
+library(ggplot2)
+library(emaph)
+# 
+# 
+# # theming ----------------------------------------------------------------------
+# 
+# # avoid long pint-out of numeric variables
+# #options(digits = 3)
+# 
+# # avoid long print-outs of tables
+# #options(dplyr.print_min = 6, dplyr.print_max = 6)
+# 
+# # common theme of all ggplot images
+# #theme_set(theme_bw(12))
+# 
+# 
+```
 
 # Activity {#activity}
 
-The objective study of human physical activity is one of the exciting opportunities created by passive EMA [@Marszalek2014]. Through technological advances in mobile sensing, we are now able to continuously monitor (in-)activity of participants in every-day life, with little to no participant burden. While questions remain with regard to the validity, reliability and clinical utility of passive EMA with regard to various aspects of activity, such as (disturbed) sleep, sedentary behavior, and energy expenditure [see, e.g., @Feehan2018, @Gomersall2016], an increasing number of mental health studies are including activity tracking devices to better understand sleep habits, circadian rhythm disorders and depression [see, e.g., @Saeb2015, @Saunders2016, @Tahmasian2013].
+The objective study of human physical activity is one of the exciting
+opportunities created by passive EMA [@Marszalek2014]. Through technological
+advances in mobile sensing, we are now able to continuously monitor
+(in-)activity of participants in every-day life, with little to no participant
+burden.
 
-In this chapter, we will discuss two passive EMA methods to assess physical activity: actigraphy and geotracking. Of these two, actigraphy has been used most in human clinical research. However, due to the massive adoption of smartphones, researchers increasingly collect geolocation data as well, inspired perhaps by the elaborate geolocation data analysis techniques that have been developed in the past decades in wildlife telemetry research [@tomkiewicz2010global].
+While questions remain with regard to the validity, reliability and clinical
+utility of passive EMA with regard to various aspects of activity, such as
+(disturbed) sleep, sedentary behavior, and energy expenditure [see, e.g.,
+@Feehan2018, @Gomersall2016], an increasing number of mental health studies are
+including activity tracking devices to better understand sleep habits, circadian
+rhythm disorders and depression [see, e.g., @Saeb2015, @Saunders2016,
+@Tahmasian2013].
+
+In this chapter, we will discuss two passive EMA methods to assess physical
+activity: actigraphy and geotracking. Of these two, actigraphy has been used
+most in human clinical research. However, due to the massive adoption of
+smartphones, researchers increasingly collect geolocation data as well, inspired
+perhaps by the elaborate geolocation data analysis techniques that have been
+developed in the past decades in wildlife telemetry research
+[@tomkiewicz2010global].
+
+
+```{r accgps, echo = FALSE, out.width = '95%', fig.asp = .5, fig.align='center', fig.cap='Actigraphy (left) and Geotracking (right): two methods for passive ecological momentary assessment of activity.'}
+
+library(grid)
+library(gridExtra)
+
+library(ggplot2)
+library(tidyr)
+library(dplyr)
+library(emaph)
+
+## acc
+d <-  subset(genea,
+              timestamp > "2018-06-01 13:00" &
+              timestamp < "2018-06-01 14:00" &
+              id == 1)
+
+# resample to 30 seconds
+d$timestamp <- lubridate::round_date(d$timestamp, "10 seconds")
+d <- d %>% group_by(timestamp) %>% summarise_all(.funs = mean)
+
+d <- gather(d,
+             key = "sensor", value = "value",
+             x, y, z)
+acc <- ggplot(subset(d, sensor == "x"), aes(timestamp, value)) +
+  geom_line() + geom_hline(yintercept = 0, linetype = 2) + 
+  ylab("acceleration") + xlab("time") +
+  theme_classic(14)
+
+
+# gps
+d <-  subset(locations,
+              accuracy <= 100 &
+              lon >=  4.80 & lon <=  4.93 &
+              lat >= 52.32 & lat <= 52.50)
+
+gps <- ggplot(subset(d, id == 1), aes(lon, lat)) +
+   geom_point(alpha = .1,  shape = 21, size = 3) + 
+   xlab("longitude") + ylab("latitude") +
+   theme_classic(14)
+
+grid.arrange(acc, gps, ncol=2, widths = c(500, 500))
+```
 
 ## Actigraphy
 \index{Actigraphy} 
 \index{Accelerometer} 
 
-Accelerometers are micro electro-mechanical systems (MEMS) that measure changes in velocity, typically simultanously on the vertical (Y), horizontal right-left (X) and horizontal front-back axis (Z). Through actigraphy, we can study the frequency, duration, and intensity of physical activity. 
-
-Figure \@ref(fig:genea-one-hour) shows one hour of data collected from a wrist-worn GENEActive accelerometer. As can be seen, three accelerometers (X, Y, Z) were simultanously providing data. Data were sampled with a frequency of 30Hz (thirty measurements per second), but subsampled here to 0.1Hz (one measurement every 10 seconds), for practical reasons. If we would have plotted the data at 30hz, the plot would have included 108.000 data points. At 0.1Hz, this reduces to 3600 points. 
+Accelerometers are micro electro-mechanical systems (MEMS) that measure changes
+in acceleration (of the device, relative to earth's gravity), typically
+simultanously on the vertical (Y), horizontal right-left (X) and horizontal
+front-back axis (Z). Through actigraphy, we study the frequency, duration, and
+intensity of physical activity. Figure \@ref(fig:genea-one-hour) shows one hour
+of data collected from a wrist-worn GENEActive accelerometer. As can be seen,
+three accelerometers (X, Y, Z) were simultanously providing data. Data were
+sampled with a frequency of 30 Herz (Hz; thirty measurements per second - which
+is common), but subsampled here to 0.1Hz (one measurement every 10 seconds), for
+practical reasons. If we would have plotted the data at 30hz, the plot would
+have included 108.000 data points. At 0.1Hz, this reduces to 3600 points.
 
 ```{r genea-one-hour, fig.asp = 0.5, fig.cap = "One hour of raw data collected with a wrist-worn GENEActive  accelerometer, sub-sampled to 10-second epochs (0.1 Hz)", echo = FALSE}
 # Plot one hour of accelerometer data.
@@ -25,7 +138,7 @@ d <-  subset(genea,
               timestamp < "2018-06-01 14:00" &
               id == 1)
 
-# resample to 30 seconds
+# resample
 d$timestamp <- lubridate::round_date(d$timestamp, "10 seconds")
 d <- d %>% group_by(timestamp) %>% summarise_all(.funs = mean)
 
@@ -39,30 +152,75 @@ ggplot(d, aes(timestamp, value)) +
   theme_classic(14)
 ```
 
-Properties of the signals that are of interest are highly dependent on the focus of the study. Highly detailed analysis of local peaks in the signal might be needed, for instance to reveal an association between activity and reported events. But analyses can also be more global, for instance when accelerometer data are used to demonstrate circadian rhythms in activity.
+Data shown are included in package 'emaph', and the R-code to reproduce the plot
+is listed below. Use this to familiarize yourself with actigraphy data. If you
+want to see how subsampling affects the number of points to plot, for example,
+you can set different values in the 'round\_date' function. For example, to get
+a point for each five seconds (0.2Hz), you would set the argument of this
+function to "5 seconds".
+
+```{r genea-one-hour-code, eval = FALSE}
+# Plot one hour of emaph accelerometer data (of person 1).
+library(dplyr)
+library(ggplot2)
+d <-  subset(emaph::genea, timestamp > "2018-06-01 13:00" &
+                           timestamp < "2018-06-01 14:00" &
+                           id == 1)
+d$timestamp <- lubridate::round_date(d$timestamp, "10 seconds")
+d <- d %>% group_by(timestamp) %>% summarise_all(.funs = mean) %>% 
+  tidyr::gather(key = "sensor", value = "value", x, y, z)
+
+ggplot(d, aes(timestamp, value)) + geom_line() + 
+  geom_hline(yintercept = 0, linetype = 2) + facet_grid(rows = vars(sensor) , scales = "free_y")
+```
+
 
 ### Data cleaning
 
-Raw accelerometer data need to be cleaned before analyses can be run. Typical data import work-flows include re-calibration (to reduce systematic measurement error), the detection of non-wear periods (to ensure that non-informative data are removed), and subsampling (to reduce analysis processing time) and filtering/aggregation (to smoothen the signal and reduce the impact of outliers, measurement error and occasional missing values). 
+Raw accelerometer data need to be cleaned before analyses can be run. Typical
+data import work-flows include re-calibration (to reduce systematic measurement
+error), the detection of non-wear periods (to ensure that non-informative data
+are removed), subsampling (reducing the sample rate to reduce analysis time) and
+filtering/aggregation (to smoothen the signal and reduce the impact of outliers,
+measurement error and occasional missing values). Study results can be highly
+dependent on these initial steps, which, unfortunately, are also complex and
+time-consuming. Specialized R-packages exist to help you with this (see, for
+example, package 'GGIR' and 'GENEARead', which are described in more detail in
+Chapter \@ref(rcat)).
+
 
 ### Feature extraction
 
-Several approaches exist to combine the x, y, z measurements are combined into a single meaningful metric. Two popular metrics are the Signal Vector Magnitude (SVM) and the Euclidian Norm Minus One (ENMO). Validation studies suggest that ENMO should be the preferred metric [@VanHeest2014, @VanHeest2015], although results also suggest that alternative metrics should also be considered when sedentary and light activities are of interest [@Bai2016]. 
+Properties of the signals that are of interest are highly dependent on the focus
+of the study. Highly detailed analysis of local peaks in the signal might be
+needed, for instance to reveal an association between activity and reported
+events. But analyses can also be more global, for instance when accelerometer
+data are used to study circadian rhythms in activity. Several approaches exist
+to combine the x, y, z measurements are combined into a single meaningful
+metric. Two popular metrics are the Signal Vector Magnitude (SVM) and the
+Euclidian Norm Minus One (ENMO). Validation studies suggest that ENMO should be
+the preferred metric [@VanHeest2014; @VanHeest2015], although recent findings
+also suggest that alternative metrics should perhaps be considered when
+sedentary and light activities are of interest [@Bai2016].
 
-SVM and ENMO are closely related. SVM is the magnitude of the raw tri-axials signals (the Euclidian distance):
+SVM and ENMO are closely related. SVM is the magnitude of the raw tri-axials
+signals (the Euclidian distance in the three-dimensional space), i.e. 
+$SVM = sqrt{x^2 + y^2 + z^2}$. ENMO is the corrected SVM: the vector magnitude
+remaining after removing one Earth Standard Gravitational unit (1g = 9.81
+m/s^2), i.e. SVM - 1. The metrics can, in principle, be calculated for each {x,
+y, z}-data point in the raw series. Typically, however, the metrics are
+calculated for time-windows (called 'epochs'), in which case the mean can be
+used to characterize the overall activity in each epoch.
 
-\begin{equation} \sqrt{x^2 + y^2 + z^2} \end{equation}
+Figure \@ref(fig:genea-one-day) shows the development of ENMO over one day, as sampled
+by GENEActive accelerometers that were worn by a young adult (top) and a
+middle-aged person (bottom). This figure is much easier to interpret than the
+plot of the raw x-y-z values in Figure \@ref(fig:genea-one-hour). Activity levels
+over the day follow a similar pattern, but the activity levels in the two plots
+are strikingly different. Age appears to matter here: activity levels of the
+middle-aged person are consistently lower than those of the young adult.
 
-ENMO is the corrected SVM: the vector magnitude remaining after removing one Earth standard
-gravitational unit (1g =  9.81 m/s^2).
-
-\begin{equation} SVM - 1 \end{equation}
-
-The metrics can, in principle, be calculated for each x,y,z-data point. Typically, however, the metrics are calculated for time-windows (called 'epochs'), in which case the mean is used to characterize the activity in the epoch.
-
-Figure \@ref{fig:genea-one-day} shows the development of ENMO over one day, as sampled by GENEActive accelerometers that were worn by a young adult (top) and a middle-aged person (bottom). This figure is much easier to interpret than the plot of the raw x-y-z values in Figure \@ref{fig:genea-one-hour}. Activity levels over the day follow a similar pattern, but the activity levels in the two plots are strikingly different. Age appears to matter here: acitivity levels of the middle-aged person are consistently lower than those of the young adult.   
-
-```{r genea-one-day, out.width = "100%", fig.asp = 0.5, fig.cap = "One day of data of the two persons in the GENEA data set of package 'emaph', summarised with ENMO, in 10-second epochs", echo = FALSE}
+```{r genea-one-day, out.width = "100%", fig.asp = 0.4, fig.cap = "One day of data of the two persons in the GENEA data set of package 'emaph', summarised with ENMO, in 10-minute epochs", echo = FALSE}
 # Plot signal vector magnitude.
 library(emaph)
 library(lubridate)
@@ -72,7 +230,7 @@ library(dplyr)
 d <-  subset(genea,
               timestamp > "2018-06-02 00:00" &
               timestamp < "2018-06-02 23:59")
-d$time <- round_date(d$timestamp, "10 seconds")
+d$time <- round_date(d$timestamp, "10 minutes")
 
 d <- d %>% 
   mutate(svm = sqrt(x^2 + y^2 + z^2) - 1) %>%
@@ -84,77 +242,150 @@ ggplot(d, aes(time, svm)) +
   geom_line() + ylab("ENMO") + 
   geom_hline(yintercept = 0.1, color = "red") + 
   facet_grid(rows = vars(id)) + 
-  theme_classic(14)
+  theme_classic(12)
 ```
 
+For SVM and ENMO, cut-off values for various activity classes have been
+determined [@Dasilva2014; @Hildebrand2014; @Rowlands2016]. The red line in
+Figure \@ref(fig:genea-one-day) marks the ENMO cut-off for
+Moderate-to-Vigorous-Physical-Activity (MVPA), which is 0.1g (or 100
+milligravity units).
 
-MVPA (@Hildebrand2014)
+```{r echo = FALSE}
+t <- table(d$id, d$svm > 0.1)
+```
+
+With this cut-off, we can summarize the two series shown in Figure
+\@ref(fig:genea-one-day) by the number of times on which ENMO is higher than the
+MVPA cut-off. The daily MVPA-count for the young adult is `r t[1, 2]`. For the
+middle-aged person, this is `r t[2, 2]`: considerably lower.
+
+You should be aware that the choice of the width of the epoch matters when
+MVPA-counts are calculated. By averaging values in each window, ENMO acts as a
+smoother, which may prevent you from the detection of short bursts of activity
+when the window is large. If we would have used a 5-second window to generate
+Figure \@ref(fig:genea-one-day), for example, the MVPA-counts would go up
+considerably for each person.
 
 
 ## Geotracking
 \index{GPS} \index{Longitude} \index{Latitude}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula augue
-metus, in tincidunt urna luctus sit amet. Sed ultrices, erat at laoreet semper,
-sem tellus hendrerit mi, eget pulvinar massa nisl ac dolor. Nunc ac tellus nec
-tortor interdum porta. Vestibulum hendrerit tempus condimentum. Donec a mollis
-sem. Aenean lectus nunc, bibendum ut orci vel, tristique pellentesque arcu.
-Vestibulum id laoreet neque. Phasellus at ex velit. Vestibulum scelerisque nulla
-ut massa tempor, ac dapibus dui viverra.
+### The Geographic Coordinate system
 
-```{r longlat, echo = FALSE, fig.cap = "Longtitude and latitude of the Earth", out.width = '75%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
+In the geographic coordinate system, each location on the earth is uniquely
+represented by two numbers: *Latitude* and *Longitude*. Latitude marks the
+north–south position of a point on the earth's surface, and longitude marks
+the east-west position (see Figure \@ref(fig:longlat)). The center of Amsterdam,
+for example, is {latitude: 52.37022; longitude: 4.89517}, which can be verified
+by punching these numbers in [Google maps](https://tinyurl.com/ybxxk99a).
+
+
+```{r longlat, echo = FALSE, fig.cap = "Latitude and Longtitude of the Earth (source: WikiPedia).", out.width = '75%', fig.align = 'center', fig.show = 'hold', fig.pos = "!h"}
 knitr::include_graphics(c(
    "images/activity/Latitude_and_Longitude_of_the_Earth.png"))
 ```
 
-### Global Positioning System (GPS)
-\index{GPS} \index{Longitude} \index{Latitude}
 
-Geotracking is enabled by the Global Positioning System (GPS).
+### The Global Positioning System
 
+The Global Positioning System (GPS) is a satellite-based radionavigation system
+that provides geolocation and time information. With GPS-receivers, latitude and
+longitude can be determined, to track geographical locations and movement. Due
+to the increasing ease with which GPS-data can be collected via modern
+smartphones, recent years have witnessed a marked increase in the use of
+GPS-based activity measures in the study of mental health.
 
+Figure \@ref(fig:fourweekgps) shows GPS-data of two people, collected over a
+period of four weeks, via the Google timeline smartphone app. Data can be found
+in the 'emaph' package (see '?locations'). 
 
-Donec sed lectus at sem ultrices commodo. Proin a viverra metus, nec scelerisque
-odio. Morbi viverra tristique libero vel fringilla. Sed at varius erat, id
-consequat nibh. Ut eget leo blandit orci posuere tincidunt ac sed erat. Aenean
-metus metus, eleifend ut facilisis a, fringilla ut neque. Nunc hendrerit
-cursus eleifend. Pellentesque habitant morbi tristique senectus et netus et
-malesuada fames ac turpis egestas. 
-
-Figure \@ref(fig:fourweekgps) shows GPS-data of two people, collected over a period of four weeks, via the Google timeline smartphone app. Data can be found in the 'emaph' package. 
-
-
-```{r fourweekgps, fig.cap="Four-week Location history of two people, collected with Google Timeline", out.width = "100%", fig.asp = .4}
-# Four-week location history.
-library(emaph)
+```{r fourweekgps, fig.cap="Four-week location history of two people, collected with Google Timeline.", out.width = "100%", fig.asp = .4}
+# Plot four-week location history of emaph location data
 library(ggplot2)
+library(emaph)
 
-d <-  subset(locations,
-              accuracy <= 100 &
+d <- subset(locations,
+            accuracy <= 100 &
               lon >=  4.80 & lon <=  5.00 &
               lat >= 52.25 & lat <= 52.50)
 
 ggplot(d, aes(lon, lat)) +
-   geom_point(alpha = .1,  shape = 21, size = 3) +
-   facet_wrap(~ id)
+  geom_point(alpha = .1,  shape = 21, size = 3) +
+  xlab("longitude") + ylab("latitude") + 
+  facet_wrap(~ id) + theme_classic(12)
+```
+
+Data-points are superposed, using transparent colors, to make a distinction
+between locations that were visited once (light areas) and places that were
+visitied many times (darker areas). From the plot, we learn that these two
+people both lived and worked in the Amsterdam area (latitude and longitude are
+close to the coordinates of Amsterdam center). We also see that they shared a
+frequently visited location (they were co-workers, working in the same
+building). Locations of person 1 reveal that this person's home was probably in
+Amsterdam, while the locations of person 2 show that this person's home was
+probably located in an Amsterdam suburb. Commuting patterns (i.e., the recurrent
+traveling between the place of residence and place of work) are clearly visible.
+
+It should be noted, though, that person 1 contributed much less data (n =
+`r table(locations$id)[1]`) than person 2 (n = `r table(locations$id)[2]`). This
+can be explained by the different devices that were used by both: Person 1 used
+an iPhone (with standard GPS-settings) and Person 2 used a Sony Z1 Android (with
+high-precision GPS features enabled). This device-related variability in GPS
+sample rates and accuracy is one of the primary challenges of naturalistic EMA
+research and EMI applications.
+
+The problem with the (in)accuracy of GPS-data is further illustrated by Figure
+\@ref(fig:nightcrawl), in which all data points are plotted that were registered
+by the smartphone of person 2 between 02:00 and 06:00, At those hours, the
+person was sleeping, in the bedroom of his house. He did not move. Yet, if we
+would take the GPS-data for granted, he regularly took a random walk in the
+parc. The red dot in the figure marks the median coordinate. This coordinate is
+very accurate: it marks the bedroom. All individual data points, however, fail
+to identify this location.
+
+```{r nightcrawl, echo = FALSE, fig.cap="Nightly GPS-fluctuations at night, revealing inaccurate location measurements", out.width = "100%", fig.asp = .4}
+# Illustrating the inaccuracy of GPS data
+library(ggplot2)
+library(emaph)
+
+d <- locations %>% filter(id == 2 & lon >=  4.833475 & lon <=  4.83355 &
+              lat >= 52.44870  & lat <= 52.44890) %>% 
+      filter(hour(timestamp) > 2 & hour(timestamp) < 6) %>%
+      mutate(day = day(timestamp))
+
+ggplot(d, aes(lon, lat)) +
+  geom_point(data = data.frame(lon = median(d$lon), lat = median(d$lat)), aes(lon, lat), size = 5, color = "red") +
+  geom_point(alpha = .9,  size = 3, shape = 16) +
+  xlab("longitude") + ylab("latitude") + 
+  theme_classic(12)
 ```
 
 
-### Geodata activity measures
+### GPS-based activity measures
 
-Raw GPS data reflect series of locations rather than activity per se. However, measures of activity can be extracted from the raw series. Table \@ref(tab:GPSfeatures) shows various derived measures that were used in a small (n = 28) study of activity and depression, conducted by researchers of Northwestern University [@Saeb2015]. Circadian movement, normalized entropy, and location variance were found to be correlated to PHQ-9 scores (-.63 < r < -.58). 
+Raw GPS-data reflect series of locations rather than activity per se. However,
+measures of activity can be extracted from these data. 
 
-Table: (\#tab:GPSfeatures) Features extracted from a GPS data set [@Saeb2015].
+Table \@ref(tab:GPSfeatures) shows some of the measures that were derived from
+GPS data in a small (n = 28) study exploring the correlation between passive EMA
+data and depression, conducted by researchers of Northwestern University
+[@Saeb2015]. The reseachers calculated total distance, location variance, the
+number of places visited by the participants during the study, the percentage of
+time spent at home (defined as a top 3 place which was most frequently visited
+between 24:00 and 6:00), and circadian movent - the consistency of location
+visits based on a 24-hour period. Circadian movement and location variance were
+found to be correlated with PHQ-9 scores in this study, but not - however - in a
+follow-up study, which included more participants [@Saeb2017].
 
-| **Name**           | **Formula**                               | **Description**                                | 
-|:------------------|:-------------------------------------------|:-----------------------------------------------|
-| Total Distance    | $$\sum(distance((lat_{t}, lon_{t}), (lat_{t-1}, lon_{t-1})$$ | Total distance between locations |
-| Location variance | $$log(\sigma_{lon}^2 + \sigma_{lat}^2)$$   | Variability of location visits                     |
-| N Places          | k-means(loc, lat)                          | Number of Location clusters                        |
-| Home Stay         | time(cluster[home]) / time(clusters[j])    | Percentage of time spent at home (defined as a     |
-|                   |                                            | top 3 cluster which was most visited between       |
-|                   |                                            | 24:00 and 6:00)                                    | 
-| Circadian         | $$\sum(psd(f_i) / (i1 - i2)$$              | Consistency of location schedule based on a        |
-| Movement          |                                            | 24-hour period (i1 = 24.5; i2 = 23.5).             |
+Table: (\#tab:GPSfeatures) Activity measures that can be derived from a GPS data set.
 
-psd: power spectral density (of the Lomb-Scargle periodogram) - see Chapter \@ref(rcat)) 
+| **Name**                         | **Formula**                                                  | 
+|:---------------------------------|:-------------------------------------------------------------|
+| Total distance between locations | $\sum(distance((lat_{t}, lon_{t}), (lat_{t-1}, lon_{t-1})$   |
+| Location variance                | $log(\sigma_{lon}^2 + \sigma_{lat}^2)$                       | 
+| N Places                         | k-means(loc, lat)                                            | 
+| Home Stay                        | time(cluster[home]) / time(clusters[j])                      |
+| Circadian Movement               | $\sum(psd(f_i) / (i1 - i2)$                                  |
+
+
