--- a/book.bib
+++ b/book.bib
@@ -820,7 +820,7 @@ year = {1995}
   publisher = {Chapman and Hall/CRC}
 }
 
-@article{hoogendoorn2017_book,
+@article{hoogendoorn2017,
   title={Machine Learning for the Quantified Self},
   author={Hoogendoorn, Mark and Funk, Burkhardt},
   year={2017},
