fix refs; wrap source

--- a/book.bib
+++ b/book.bib
@@ -253,7 +253,7 @@
 
 @article{Conner2009,
   title={Experience sampling methods: A modern idiographic approach to personality research},
-  author={Conner, Tamlin S and Tennen, Howard and Fleeson, William and Barrett, Lisa Feldman},
+  author={Conner, Tamlin S. and Tennen, Howard and Fleeson, William and Barrett, Lisa Feldman},
   journal={Social and personality psychology compass},
   volume={3},
   number={3},
@@ -263,7 +263,7 @@
 }
 
 @Article{Conner2012a,
-  author        = {Conner, Tamlin S.  and Feldman Barrett, Lisa},
+  author        = {Conner, Tamlin S. and Feldman Barrett, Lisa},
   title         = {Trends in ambulatory self-report: The role of momentary experience in psychosomatic medicine},
   journal       = {Psychosomatic Medicine},
   year          = {2012},
@@ -278,7 +278,7 @@
 }
 
 @InCollection{Conner2012b,
-  author    = {Conner, Tamlin S.  and  Lehman, Barbara J.},
+  author    = {Conner, Tamlin S. and Lehman, Barbara J.},
   title     = {Getting started: Launching a study in daily life.},
   booktitle = {Handbook of research methods for studying daily life.},
   publisher = {Guilford Press},
@@ -594,7 +594,7 @@ year = {2018}
 
 @article{Evenson2015,
   title={Systematic review of the validity and reliability of consumer-wearable activity trackers},
-  author={Evenson, Kelly R and Goto, Michelle M and Furberg, Robert D},
+  author={Evenson, Kelly R. and Goto, Michelle M. and Furberg, Robert D.},
   journal={International Journal of Behavioral Nutrition and Physical Activity},
   volume={12},
   number={1},
@@ -779,7 +779,7 @@ year = {1995}
 }
 
 @article{Hamaker2012,
-  author = {Hamaker, E.},
+  author = {Hamaker, Ellen},
   doi = {10.1007/978-3-531-93094-7},
   isbn = {9781609187484},
   journal = {Handbook of Research Methods for Studying Daily Life},
@@ -919,7 +919,7 @@ year = {1995}
 
 @article{kirchner2016,
   title={Spatio-temporal determinants of mental health and well-being: Advances in geographically-explicit ecological momentary assessment (GEMA)},
-  author={Kirchner, Thomas R and Shiffman, Saul},
+  author={Kirchner, Thomas R. and Shiffman, Saul},
   journal={Social psychiatry and psychiatric epidemiology},
   volume={51},
   number={9},
@@ -1383,7 +1383,7 @@ year = {1999}
 
 @article{schueller2017,
   title={Ecological momentary interventions for depression and anxiety},
-  author={Schueller, Stephen M and Aguilera, Adrian and Mohr, David C},
+  author={Schueller, Stephen M. and Aguilera, Adrian and Mohr, David C},
   journal={Depression and anxiety},
   volume={34},
   number={6},
@@ -1615,7 +1615,7 @@ year = {1999}
 }
 
 @Article{VandeLeemput2014,
-  author  = {{Van de Leemput}, I. A. and Wichers, M. and Cramer, A. O. J. and Borsboom, D. and Tuerlinckx, F. and Kuppens, P. and {Van Nes}, E. H. and Viechtbauer, W. and Giltay, E. J. and Aggen, S. H. and Derom, C. and Jacobs, N. and Kendler, K. S. and {Van der Maas}, H. L. J. and Neale, M. C. and Peeters, F. and Thiery, E. and Zachar, P. and Scheffer, M.},
+  author  = {{Van de Leemput}, I. A. and Wichers, Marieke and Cramer, A. O. J. and Borsboom, D. and Tuerlinckx, F. and Kuppens, P. and {Van Nes}, E. H. and Viechtbauer, W. and Giltay, E. J. and Aggen, S. H. and Derom, C. and Jacobs, N. and Kendler, K. S. and {Van der Maas}, H. L. J. and Neale, M. C. and Peeters, F. and Thiery, E. and Zachar, P. and Scheffer, M.},
   title   = {{Critical slowing down as early warning for the onset and termination of depression}},
   journal = {Proceedings of the National Academy of Sciences},
   year    = {2014},
@@ -1651,7 +1651,7 @@ year = {1999}
 
 @article{Schuurman2015,
   title={Incorporating measurement error in n= 1 psychological autoregressive modeling},
-  author={Schuurman, No{\'e}mi Katalin and Houtveen, Jan H and Hamaker, Ellen L},
+  author={Schuurman, No{\'e}mi Katalin and Houtveen, Jan H and Hamaker, Ellen},
   journal={Frontiers in psychology},
   volume={6},
   pages={1038},
@@ -1870,7 +1870,7 @@ year = {1999}
 }
 
 @Article{Wichers2011,
-  author    = {Wichers, M. and Simons, C. J. P. and Kramer, I. M. A. and Hartmann, J. A. and Lothmann, C. and Myin-Germeys, I. and {Van Bemmel}, A. L. and Peeters, F. and Delespaul, Ph. and {Van Os}, J.},
+  author    = {Wichers, Marieke and Simons, C. J. P. and Kramer, I. M. A. and Hartmann, J. A. and Lothmann, C. and Myin-Germeys, I. and {Van Bemmel}, A. L. and Peeters, F. and Delespaul, Ph. and {Van Os}, J.},
   title     = {{Momentary assessment technology as a tool to help patients with depression help themselves}},
   journal   = {Acta Psychiatrica Scandinavica},
   year      = {2011},
