--- a/EMA.Rmd
+++ b/EMA.Rmd
@@ -16,13 +16,32 @@
 \index{EMA synonyms!Continuous Unified Electronic Diary Method} 
 \index{EMA synonyms!Intensive-longitudinal Study Design} 
 
-Ecological Momentary Assessment (EMA) has many aliases. It is known as 'Experience Sampling' [@Larson1983], 'Ambulatory Assessment' [@EbnerPriemer2009] or 'Ambulatory Self-reporting' [@Conner2012a], 'Real-time Data Capturing', the 'Continuous Unified Electronic Diary Method' [@EllisDavies2012], and as the 'Intensive-longitudinal Study Design' [@Bolger2013]. The different terms stress different aspects of EMA research. All, however, refer to research methods that involve the *repeated sampling of people's current thoughts, emotions, behavior, physiological states, and context, in their natural environment, typically (but not necessarily) via electronic wearable devices* [@Shiffman2008].
+Ecological Momentary Assessment (EMA) has many aliases. It is known as
+'Experience Sampling' [@Larson1983], 'Ambulatory Assessment'
+[@EbnerPriemer2009] or 'Ambulatory Self-reporting' [@Conner2012a],
+'Real-time Data Capturing', the 'Continuous Unified Electronic Diary Method'
+[@EllisDavies2012], and as the 'Intensive-longitudinal Study Design'
+[@Bolger2013]. The different terms stress different aspects of EMA research.
+All, however, refer to research methods that involve the *repeated sampling of
+people's current thoughts, emotions, behavior, physiological states, and
+context, in their natural environment, typically (but not necessarily) via
+electronic wearable devices* [@Shiffman2008].
 
 ### Active versus Passive EMA
 \index{EMA!Passive EMA} \index{EMA!Observational EMA|see{Passive EMA}}
 \index{EMA!Active EMA} \index{EMA!Self-report EMA|see{Active EMA}}
 
-In EMA research, two forms of data collection are distinguished: 1) 'Active EMA', with which *self-report* data are collected, and 2) 'Passive EMA', with which *observational* data are collected. Active EMA requires participants to consciously provide information, for example by rating their current mood in response to a question that is prompted on their smartphone (see Figure \@ref(fig:fig01a)). In passive EMA, information is collected through wearables or log files without active involvement of participants, for example on heart-rate, activity, smartphone use or engagement on social media (see Figure \@ref(fig:fig01b)).Studies may combine active and passive EMA. A study into sleep patterns, for example, may involve both a self-report sleep diary and an accelerometer sensor [@Meijden2016].
+In EMA research, two forms of data collection are distinguished: 1) 'Active
+EMA', with which *self-report* data are collected, and 2) 'Passive EMA', with
+which *observational* data are collected. Active EMA requires participants to
+consciously provide information, for example by rating their current mood in
+response to a question that is prompted on their smartphone (see Figure
+\@ref(fig:fig01a)). In passive EMA, information is collected through wearables or
+log files without active involvement of participants, for example on heart-rate,
+activity, smartphone use or engagement on social media (see Figure
+\@ref(fig:fig01b)).Studies may combine active and passive EMA. A study into sleep
+patterns, for example, may involve both a self-report sleep diary and an
+accelerometer sensor [@Meijden2016].
 
 ```{r fig01a, echo = FALSE, out.width = '95%', fig.asp = .25, fig.align='center', fig.cap='Active EMA: data are collected by prompting questions to participants, for instance by using an EMA app such as Moodbuster. '}
 library(png)
@@ -88,13 +107,34 @@ grid.arrange(g, b, ncol=2, widths = c(100, 500))
 \index{Sampling!Event-contingent} 
 \index{Sample plan|see{Sampling}}
 
-EMA is further typified by the way in which data sampling is triggered. EMA sampling may be triggered by a signal (signal-contingent sampling), an event (event-contingent sampling), or a combination of both [@Conner2012b]. 
+EMA is further typified by the way in which data sampling is triggered. EMA
+sampling may be triggered by a signal (signal-contingent sampling), an event
+(event-contingent sampling), or a combination of both [@Conner2012b].
 
-In *signal-contingent sampling*, participants respond to questions when they are prompted to do so by a signal (or 'beeps', as these signals are often called in the literature). In *event-contingent sampling*, study participants complete an assessment whenever a specific event occurs, such as a panic attack or alcohol consumption. 
+In *signal-contingent sampling*, participants respond to questions when they are
+prompted to do so by a signal (or 'beeps', as these signals are often called in
+the literature). In *event-contingent sampling*, study participants complete an
+assessment whenever a specific event occurs, such as a panic attack or alcohol
+consumption.
 
-Signal-contingent sampling can follow a fixed or a random scheme. In a fixed scheme, participants are prompted at fixed time-points, for example at 9:30, 12:30, and 16:30. In a random scheme, prompts are sent at random time points, typically in pre-set intervals. For example, participants could be prompted to complete two assessments per day, one at a random time point between 10:00 and 14:00, and one at a random time point between 14:00 and 16:00. Using pre-set intervals ensures that participants do not receive several prompts within a limited time-frame [@Piasecki2007]. In addition, it ensures that participants are not bothered by prompts at inappropriate times (e.g., participants may not appreciate prompts after 22:00 and before 7:30).
+Signal-contingent sampling can follow a fixed or a random scheme. In a fixed
+scheme, participants are prompted at fixed time-points, for example
+at 9:30, 12:30, and 16:30. In a random scheme, prompts are sent at random time
+points, typically in pre-set intervals. For example, participants could be
+prompted to complete two assessments per day, one at a random time point
+between 10:00 and 14:00, and one at a random time point between 14:00 and 16:00.
+Using pre-set intervals ensures that participants do not receive several prompts
+within a limited time-frame [@Piasecki2007]. In addition, it ensures that
+participants are not bothered by prompts at inappropriate times (e.g.,
+participants may not appreciate prompts after 22:00 and before 7:30).
 
-With 'event-contingent sampling', the sample rate is determined by the occurrence rate of the event. One way to implement this is to simply ask study participants to complete a questionnaire whenever the event occurs. When active EMA is combined with passive EMA, it may be also be possible to trigger event-based prompts automatically based on changes in passive data, for example by triggering an EMA questionnaire automatically whenever a significant change in activity level is detected [@Smyth2003].
+With 'event-contingent sampling', the sample rate is determined by the
+occurrence rate of the event. One way to implement this is to simply ask study
+participants to complete a questionnaire whenever the event occurs. When active
+EMA is combined with passive EMA, it may be also be possible to trigger
+event-based prompts automatically based on changes in passive data, for example
+by triggering an EMA questionnaire automatically whenever a significant change
+in activity level is detected [@Smyth2003].
 
 ## Why EMA?
 
@@ -102,22 +142,47 @@ With 'event-contingent sampling', the sample rate is determined by the occurrenc
 
 \index{Recall bias}
 
-In clinical research, self-report questionnaires are often used to assess the presence and severity of symptoms in the recent past. While useful, these retrospective self-reports are not without drawbacks, since they tap into the memory of respondents, which can be distorted [@Shiffman2008; @Moore2016]. EMA circumvents this recall bias, by asking participants to rate their *current state*, rather than asking them to reflect on past experiences.
+In clinical research, self-report questionnaires are often used to assess the
+presence and severity of symptoms in the recent past. While useful, these
+retrospective self-reports are not without drawbacks, since they tap into the
+memory of respondents, which can be distorted [@Shiffman2008; @Moore2016]. EMA
+circumvents this recall bias, by asking participants to rate their *current
+state*, rather than asking them to reflect on past experiences.
 
 
 ### To increase the ecological validity of research findings
 
 \index{Ecological validity} 
 
-A key feature of EMA is the collection of data in real-world environments, as participants go about their daily activities, as opposed to data collection in controlled labs or research settings [@Shiffman2008]. Thus, EMA data can be expected to result in research findings that have better ecological validity and better generalization to the subject’s lived experience in real-world settings. Practical applications derived from EMA data are therefore expected to be more relevant to real-life situations.
+A key feature of EMA is the collection of data in real-world environments, as
+participants go about their daily activities, as opposed to data collection in
+controlled labs or research settings [@Shiffman2008]. Thus, EMA data can be
+expected to result in research findings that have better ecological validity and
+better generalization to the subject’s lived experience in real-world settings.
+Practical applications derived from EMA data are therefore expected to be more
+relevant to real-life situations.
 
 ### To advance ideographic research
 \index{Nomothetic research} \index{Ideographic research} 
 \index{Intra-individual process|see{Ideographic research}}
 
-In clinical research, a distinction is often made between *ideographic* and *nomothetic* methods [@allport1937]. Idiographic methods are those that "aim to identify patterns of behavior within the person across a population of experiences or situations, and nomothetic methods[are] those that aim to identify patterns of behavior across a population of individuals, rather than for any given individual" [@Conner2009].  The difference is important. As is increasingly recognized, group-level findings do not necessarily generalize to the individual members of the group, as shown by Figure \@ref(fig:fig01c) (adapted from @Hamaker2012).
+In clinical research, a distinction is often made between *ideographic* and
+*nomothetic* methods [@allport1937]. Idiographic methods are those that "aim
+to identify patterns of behavior within the person across a population of
+experiences or situations, and nomothetic methods[are] those that aim to
+identify patterns of behavior across a population of individuals, rather than
+for any given individual" [@Conner2009]. The difference is important. As is
+increasingly recognized, group-level findings do not necessarily generalize to
+the individual members of the group, as shown by Figure \@ref(fig:fig01c)
+[@Hamaker2012].
 
-In contrast to more qualitative idiographic methods, such as interviews and N = 1 case studies, EMA allows for the collection of large amounts of quantitative data on the individual level. Thus, EMA offers a quantitative method for idiographic research, measuring characteristics of (unique) individuals across time and context [@Shiffman2008]. This allows for a better understanding of intra-individual process, and of the factors that account for variability within and between individuals.
+In contrast to more qualitative idiographic methods, such as interviews and N
+= 1 case studies, EMA allows for the collection of large amounts of quantitative
+data on the individual level. Thus, EMA offers a quantitative method for
+idiographic research, measuring characteristics of (unique) individuals across
+time and context [@Shiffman2008]. This allows for a better understanding of
+intra-individual process, and of the factors that account for variability within
+and between individuals.
 
 ```{r fig01c, fig.asp = .4, out.width = "100%", echo = FALSE, fig.cap = "An illustration of how group-level and individual-level processes can differ dramatically: the relationship between x on y is negative in the group (as shown by the descending regression line), but positive for individuals (marked by ellipses)."}
 
@@ -161,38 +226,99 @@ ggplot(dt, aes(x = X, y = Y, group = id)) +
 \index{Ecological Momentary Intervention}
 \index{EMI|see{Ecological Momentary Intervention}}
 
-EMA enables Ecological Momentary Interventions (EMI): interventions that that are provided to people during their everyday lives, in real time, and in their natural settings [@heron2010]. If dynamic disease processes can be adequately monitored in everyday-life through EMA, it should also be possible to intervene when EMA data reflect clear changes in these processes, in a way that is maximally effective given what is known about the individual. A key term in the last sentence, however, is "adequate". We should be aware of the "garbage-in/garbage-out principle". Before EMI's can be considered, the psychometric properties of EMA measures should be demonstrated first. 
+EMA enables Ecological Momentary Interventions (EMI): interventions that that
+are provided to people during their everyday lives, in real time, and in their
+natural settings [@heron2010]. If dynamic disease processes can be adequately
+monitored in everyday-life through EMA, it should also be possible to intervene
+when EMA data reflect clear changes in these processes, in a way that is
+maximally effective given what is known about the individual. A key term in the
+last sentence, however, is "adequate". We should be aware of the
+"garbage-in/garbage-out principle". Before EMI's can be considered, the
+psychometric properties of EMA measures should be demonstrated first.
 
 ## EMA research findings: A birds-eye view
 
-The use of EMA in mental health research might seem novel but this methodology has a long track record. Already in the 1980's, early pioneers used electronic devices to elicit responses from study participants to tap into (mental) health processes in everyday life [see, e.g., @Csikszentmihalyi2014]. Recent years, however, have witnessed a large increase in EMA research. Rapid technological developments, a marked interest in the individual, and a wide recognition of the need to study health-related processes in real-life situations have all contributed to this. 
+The use of EMA in mental health research might seem novel but this methodology
+has a long track record. Already in the 1980's, early pioneers used electronic
+devices to elicit responses from study participants to tap into (mental) health
+processes in everyday life [see, e.g., @Csikszentmihalyi2014]. Recent years,
+however, have witnessed a large increase in EMA research. Rapid technological
+developments, a marked interest in the individual, and a wide recognition of the
+need to study health-related processes in real-life situations have all
+contributed to this.
 
-EMA-based research in mental health has produced an impressive trove of findings that have supported and, sometimes, challenged existing theories on behavior. EMA data, whether collected as self-report or via wearable device/sensor, have diagnostic, monitoring, management, or intervention applications (@Patel2012; @Aung2017; @Evenson2015]. Its feasibility for mental health research is evidenced by its use in observational studies and randomized controlled trials on a wide range of topics and populations. Below, we present a non-exhaustive summary of systematic reviews and meta-analyses of EMA research.
+EMA-based research in mental health has produced an impressive trove of findings
+that have supported and, sometimes, challenged existing theories on behavior.
+EMA data, whether collected as self-report or via wearable device/sensor, have
+diagnostic, monitoring, management, or intervention applications (@Patel2012;
+@Aung2017; @Evenson2015]. Its feasibility for mental health research is
+evidenced by its use in observational studies and randomized controlled trials
+on a wide range of topics and populations. Below, we present a non-exhaustive
+summary of systematic reviews and meta-analyses of EMA research.
 
 ### Active EMA
 \index{EMA!Active EMA}
 
-Mood disorders have been well-studied using active EMA methods [@Wenze2010], with several reviews outlining recent findings in depression [@Telford2012; @Wichers2011; @burton2013], anxiety disorders [@Walz2014], and depression/bipolar disorder [@AanhetRot2012]. The potential of EMA for use among young populations showed promising results [@Dubad2018]. Innovations in mobile devices has improved the feasibility and popularity of ecological momentary interventions (EMIs) for anxiety and depression [@schueller2017]. A systematic review and meta-analysis of EMIs reported small to medium effects on mental health [@Versluis2016].
+Mood disorders have been well-studied using active EMA methods [@Wenze2010],
+with several reviews outlining recent findings in depression [@Telford2012;
+@Wichers2011; @burton2013], anxiety disorders [@Walz2014], and
+depression/bipolar disorder [@AanhetRot2012]. The potential of EMA for use
+among young populations showed promising results [@Dubad2018]. Innovations in
+mobile devices has improved the feasibility and popularity of ecological
+momentary interventions (EMIs) for anxiety and depression [@schueller2017]. A
+systematic review and meta-analysis of EMIs reported small to medium effects on
+mental health [@Versluis2016].
 
-EMA appears to be particularly well-suited to examine the role of emotions in the development and maintenance of obesity and eating disorders [@Engel2016]. Meta-analytic results suggest that negative affect, rather than hunger, is associated with binge eating among individuals with eating disorders [@Haedt2011; @Haedt2012]. EMA methods have also significantly contributed to the understanding of the processes that drive substance use, cessation, and relapse, often in contrast with theory-driven studies largely derived from global reports collected through retrospective questionnaires [@Shiffman2009; @Swendsen2016].
+EMA appears to be particularly well-suited to examine the role of emotions in
+the development and maintenance of obesity and eating disorders [@Engel2016].
+Meta-analytic results suggest that negative affect, rather than hunger, is
+associated with binge eating among individuals with eating disorders
+[@Haedt2011; @Haedt2012]. EMA methods have also significantly contributed to
+the understanding of the processes that drive substance use, cessation, and
+relapse, often in contrast with theory-driven studies largely derived from
+global reports collected through retrospective questionnaires [@Shiffman2009;
+@Swendsen2016].
 
 ### Passive EMA
 \index{EMA!Passive EMA}
 
-Objective EMA data collected passively through bio-sensors, smart devices, or context/environmental (e.g. location) has been shown to be a feasible and promising method for the longitudinal monitoring of individuals with affective disorders [@Dogan2017; @kirchner2016]. The potential of passive sensing via smartphone for mental health research are outlined in two reviews, encompassing the assessment of health and well-being [@Cornet2017], and the measuring, understanding, and intervening in mental illness and maintaining mental health [@Aung2017]. A systematic review and meta-analysis on actigraphy reported diurnal variations in activity levels among individuals with depression [@burton2013]. Compared with traditional self-reports, passive sensing was reported to be less intrusive and to result in more accurate data, while providing options for continuous monitoring and feedback. 
+Objective EMA data collected passively through bio-sensors, smart devices, or
+context/environmental (e.g. location) has been shown to be a feasible and
+promising method for the longitudinal monitoring of individuals with affective
+disorders [@Dogan2017; @kirchner2016]. The potential of passive sensing via
+smartphone for mental health research are outlined in two reviews, encompassing
+the assessment of health and well-being [@Cornet2017], and the measuring,
+understanding, and intervening in mental illness and maintaining mental health
+[@Aung2017]. A systematic review and meta-analysis on actigraphy reported
+diurnal variations in activity levels among individuals with depression
+[@burton2013]. Compared with traditional self-reports, passive sensing was
+reported to be less intrusive and to result in more accurate data, while
+providing options for continuous monitoring and feedback.
 
 
 ### Limitations
+\index{Limitations}
 
-While available reviews suggest that EMA is a feasible research method that has the potential to make significant contributions to mental health research, one significant drawback of EMA highlighted in several reviews is the lack of high-quality studies. Other general limitations considered include:
+While available reviews suggest that EMA is a feasible research method that has
+the potential to make significant contributions to mental health research, one
+significant drawback of EMA highlighted in several reviews is the lack of
+high-quality studies. Other general limitations considered include:
 
-\index{Limitations} 
--	Unclear generalizability of research findings due to selective samples [@burton2013], and small sample sizes [@Dogan2017]
--	Unclear practice effects [@Telford2012], and issues related to reactivity [@Shiffman2009]
--	Issues related to the feasibility and tolerability of prolonged and intense data periods of data collection [@Wichers2011]
--	Issues of privacy, ethics and informed consent [@Cornet2017]
--	Changing responsibilities of researchers and clinicians in EMA studies, e.g. in suicide ideation research [@Wenze2010]
-- Unresolved methodological issues [@Dubad2018]
+  - Unclear generalizability of research findings due to selective samples
+    [@burton2013], and small sample sizes [@Dogan2017]
+
+  - Unclear practice effects [@Telford2012], and issues related to reactivity
+    [@Shiffman2009]
+
+  - Issues related to the feasibility and tolerability of prolonged and intense
+    data periods of data collection [@Wichers2011]
+
+  - Issues of privacy, ethics and informed consent [@Cornet2017]
+
+  - Changing responsibilities of researchers and clinicians in EMA studies, e.g.
+    in suicide ideation research [@Wenze2010]
+    
+  - Unresolved methodological issues [@Dubad2018]
 
 \index{EMA research!Anxiety disorders}
 \index{EMA research!Eating disorders}
@@ -229,16 +355,28 @@ Table: (\#tab:emareviews) A selection of reviews of EMA studies targeting variou
 
 ## What is in this manual?
 
-This manual comprises six parts, in which various aspects of EMA research will be discussed. 
+This manual comprises six parts, in which various aspects of EMA research are
+discussed.
 
-- Chapter \@ref(rstudio), the second chapter of part I, introduces R, the statistical program that is an indispensable tool for the EMA researcher.
+  - Chapter \@ref(rstudio), the second chapter of part I, introduces R, the
+    statistical program that is an indispensable tool for the EMA researcher.
 
-- **Part II** focuses on EMA study design (Chapter \@ref(methods), EMA instruments (Chapter \@ref(instruments)) and EMA data management (Chapter \@ref(datamanagement)).
+  - **Part II** focuses on EMA study design (Chapter \@ref(methods), EMA
+    instruments (Chapter \@ref(instruments)) and EMA data management (Chapter
+    \@ref(datamanagement)).
 
-- **Part III** details the momentary assessment of two specific outcomes: Mood (Chapter \@ref(mood)) and Activity (Chapter \@ref(activity)).
+  - **Part III** details the momentary assessment of two specific outcomes: Mood
+    (Chapter \@ref(mood)) and Activity (Chapter \@ref(activity)).
 
-- **Part IV** introduces EMA data analysis techniques: Feature Extraction (Chapter \@ref(features)), and Mixed Modelling (Chapter \@ref(lmm)).
+  - **Part IV** introduces EMA data analysis techniques: Feature Extraction
+    (Chapter \@ref(features)), and Mixed Modelling (Chapter \@ref(lmm)).
 
-- In **part V**, the application of the preceding material is illustrated in a case study, in which EMA is used to detect early warnings signs of depression (Chapter \@ref(csd)).
+  - In **part V**, the application of the preceding material is illustrated in a
+    case study, in which EMA is used to detect early warnings signs of
+    depression (Chapter \@ref(csd)).
 
-- **Part VI** provides three catalogues of EMA resources. Chapter \@ref(catalogue) lists EMA research groups within APH, chapter \@ref(ema-instruments-catalogue) lists EMA instruments that were found to be in use among APH researchers, and Chapter \@ref(rcat) summarizes useful R extensions (packages) for EMA data analysis.
+  - **Part VI** provides three catalogues of EMA resources. Chapter
+    \@ref(catalogue) lists EMA research groups within APH, chapter
+    \@ref(ema-instruments-catalogue) lists EMA instruments that were found to be
+    in use among APH researchers, and Chapter \@ref(rcat) summarizes useful R
+    extensions (packages) for EMA data analysis.
