small text edits

--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,7 @@ guidelines for EMA-studies, and a catalogue of EMA research in the APH
 consortium.
 
 This manual was written in Bookdown [@R-bookdown\_book; @R-bookdown]. Sources
-are freely available at 'github', via
+are freely available at 'GitHub', via
 <https://github.com/jruwaard/aph_ema_handbook>. Please post your comments and
 suggestions there, or via e-mail, through <aph.ema@ggzingeest.nl>.
 
@@ -52,5 +52,5 @@ This manual will be continously updated. In citations, please include explicit
 build dates, as in:
 
 Ruwaard, J., Kooistra, L. and Thong, M. (2018). *Ecological Momentary Assessment
-in Mental Health Research: A Practical Introduction, With Examples in R (1st
+in Mental Health Research: A Practical Introduction, with Examples in R (1st
 edition - build `r Sys.Date()`)*. Amsterdam: APH Mental Health. 
