fix refs (consistent author names)

--- a/book.bib
+++ b/book.bib
@@ -106,7 +106,7 @@
 
 
 @article{Blaauw2016,
-  author = {Blaauw, F. J. and Schenk, H. M. and Jeronimus, B. F. and {Van der Krieke}, L. and {De Jonge}, P. and Aiello, M. and Emerencia, A. C.},
+  author = {Blaauw, Frank J. and Schenk, H. M. and Jeronimus, B. F. and {Van der Krieke}, L. and {De Jonge}, P. and Aiello, M. and Emerencia, Ando C.},
   doi = {10.1016/j.jbi.2016.08.001},
   isbn = {1532-0480 (Electronic) 1532-0464 (Linking)},
   issn = {15320464},
@@ -488,7 +488,7 @@ year = {2018}
 
 
 @article{Emerencia2016,
-  author = {Emerencia, Ando Celino and {Van Der Krieke}, Lian and Bos, Elisabeth H. and {De Jonge}, Peter and Petkov, Nicolai and Aiello, Marco},
+  author = {Emerencia, Ando C. and {Van Der Krieke}, Lian and Bos, Elisabeth H. and {De Jonge}, Peter and Petkov, Nicolai and Aiello, Marco},
   doi = {10.1109/JBHI.2015.2402280},
   isbn = {2168-2194 VO - 20},
   issn = {21682194},
@@ -603,14 +603,13 @@ year = {2018}
   publisher={BioMed Central}
 }
 
-@misc{Feehan2018,
+@Article{Feehan2018,
   author = {Feehan, Lynne M. and Geldman, Jasmina and Sayre, Eric C. and Park, Chance and Ezzat, Allison M. and Yoo, Ju Young and Hamilton, Clayon B. and Li, Linda C.},
-  booktitle = {Journal of Medical Internet Research},
+  journal = {Journal of Medical Internet Research},
   doi = {10.2196/10527},
   issn = {14388871},
-  keywords = {Accuracy,Data accuracy,Distance,Energy expenditure,Energy metabolism,Fitbit,Fitness trackers,Review,Sleep,Steps,Systematic review,Time in activity,Wearable activity tracker},
   pmid = {30093371},
-  title = {{Accuracy of fitbit devices: Systematic review and narrative syntheses of quantitative data}},
+  title = {Accuracy of fitbit devices: Systematic review and narrative syntheses of quantitative data},
   year = {2018}
 }
 
@@ -654,9 +653,8 @@ year = {2018}
   isbn = {1438-8871},
   issn = {14388871},
   journal = {Journal of Medical Internet Research},
-  keywords = {Accelerometry,Activity tracker,Fitbit,Jawbone,Physical activity,Sedentary behavior},
   pmid = {27604226},
-  title = {{Estimating physical activity and sedentary behavior in a free-living context: A pragmatic comparison of consumer-based activity trackers and actigraph accelerometry}},
+  title = {Estimating physical activity and sedentary behavior in a free-living context: A pragmatic comparison of consumer-based activity trackers and actigraph accelerometry},
   year = {2016}
 }
 
@@ -713,7 +711,7 @@ year = {1995}
 
 @Article{Green2016,
     title = {simr: An R package for power analysis of generalised linear mixed models by simulation},
-    author = {Green, Peter  and MacLeod, Catriona J },
+    author = {Green, Peter and MacLeod, Catriona J },
     journal = {Methods in Ecology and Evolution},
     volume = {7},
     number = {4},
@@ -929,7 +927,7 @@ year = {1995}
 }
 
 @article{Kleiboer2016,
-  author = {Kleiboer, A. and Smit, J. and Bosmans, J. and Ruwaard, J. and Andersson, G. and Topooco, N. and Berger, T. and Krieger, T. and Botella, C. and Ba{\~{n}}os, R. and Chevreul, K. and Araya, R. and Cerga-Pashoja, A. and Cie{\'{s}}lak, R. and Rogala, A. and Vis, C. and Draisma, S. and Schaik, A. and Kemmeren, L. and Ebert, D. and Berking, M. and Funk, B. and Cuijpers, P. and Riper, H.},
+  author = {Kleiboer, AM and Smit, J. and Bosmans, J. and Ruwaard, J. and Andersson, G. and Topooco, N. and Berger, T. and Krieger, T. and Botella, C. and Ba{\~{n}}os, R. and Chevreul, K. and Araya, R. and Cerga-Pashoja, A. and Cie{\'{s}}lak, R. and Rogala, A. and Vis, C. and Draisma, S. and Schaik, A. and Kemmeren, L. and Ebert, D. and Berking, M. and Funk, B. and Cuijpers, P. and Riper, H.},
   doi = {10.1186/s13063-016-1511-1},
   issn = {17456215},
   journal = {Trials},
@@ -1065,7 +1063,7 @@ year = {1999}
   title     = {{Handbook of research methods for studying daily life.}},
   publisher = {Guilford Press},
   year      = {2012},
-  editor    = {Mehl, Matthias R and Conner, Tamlin S},
+  editor    = {Mehl, Matthias R and Conner, Tamlin S.},
   address   = {New York, NY, US},
   isbn      = {978-1-60918-747-7 (Hardcover); 978-1-60918-749-1 (PDF)},
   booktitle = {Handbook of research methods for studying daily life.},
@@ -1216,7 +1214,7 @@ year = {1999}
 
 
 @book{Pinheiro2000,
-  author = {Pinheiro, Jose C and Bates, Douglas M},
+  author = {Pinheiro, Jose and Bates, Douglas M},
   publisher = {Springer Verlag},
   location = {New York},
   doi = {10.1198/tech.2001.s574},
@@ -1230,7 +1228,7 @@ year = {1999}
 }
 
 @Article{Posner2005,
-  author  = {Posner, J and Russell, J A and Peterson, B S},
+  author  = {Posner, J and Russell, James A and Peterson, B S},
   title   = {{The circumplex model of affect: An integrative approach to affective neuroscience, cognitive development, and psychopathology}},
   journal = {Development and Psychopathology},
   year    = {2005},
@@ -1455,7 +1453,7 @@ year = {1999}
 }
 
 @Article{Smyth2003,
-  author  = {Smyth, Joshua M. and Stone, Arthur A.},
+  author  = {Smyth, Joshua M and Stone, Arthur A.},
   title   = {Ecological momentary assessment research in behavioral medicine},
   journal = {Journal of Happiness Studies},
   year    = {2003},
@@ -1545,7 +1543,7 @@ year = {1999}
 
 @book{twisk2013,
   title = {Applied longitudinal data analysis for epidemiology: a practical guide (2nd Revised edition)},
-  author = {Twisk, Jos WR},
+  author = {Twisk, JWR},
   year = {2013},
   publisher = {Cambridge University Press},
   isbn = {9781107699922}
@@ -1602,7 +1600,7 @@ year = {1999}
 
 
 @Article{VanderKrieke2015,
-  author = {{Van der Krieke}, Lian and Emerencia, C. Ando and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and {de Jonge}, Peter}, 
+  author = {{Van der Krieke}, Lian and Emerencia, Ando C. and Bos, H. Elisabeth and Rosmalen, GM Judith and Riese, Harri{\"e}tte and Aiello, Marco and Sytema, Sjoerd and {de Jonge}, Peter}, 
   title = {Ecological Momentary Assessments and Automated Time Series Analysis to Promote Tailored Health Care: A Proof-of-Principle Study},
   journal = {JMIR Research Protocols},
   year = {2015},
@@ -1630,7 +1628,7 @@ year = {1999}
 
 
 @article{Rijsbergen2012,
-  author = {{Van Rijsbergen}, Gerard D and Bockting, Claudi L H and Berking, Matthias and Koeter, Maarten W J and Schene, Aart H},
+  author = {{Van Rijsbergen}, Gerard D. and Bockting, Claudi L H and Berking, Matthias and Koeter, Maarten W J and Schene, Aart H},
   doi = {10.1371/journal.pone.0046796},
   journal = {Plos One},
   number = {10},
@@ -1699,7 +1697,7 @@ year = {1999}
 
 @article{VanHeest2014,
   title = {Autocalibration of accelerometer data for free-living physical activity assessment using local gravity and temperature: An evaluation on four continents},
-  author = {{Van Hees}, Vincent T and  Fang, Zhou and  Langford, Joss and  Assah,Felix and Mohammad, A and da Silva, Inacio C and  Trenell, Michael I and  White, Tom and  Wareham, Nicholas J and  Brage, Soren},
+  author = {{Van Hees}, Vincent T. and  Fang, Zhou and  Langford, Joss and  Assah,Felix and Mohammad, A and da Silva, Inacio C and  Trenell, Michael I and  White, Tom and  Wareham, Nicholas J and  Brage, Soren},
   doi = {10.1152/japplphysiol.00421.2014},
   journal = {Journal of Applied Physiology},
   volume = {117},
@@ -1711,7 +1709,7 @@ year = {1999}
 
 @article{VanHeest2015,
   title = {A novel, open access method to assess sleep duration using a wrist-worn accelerometer},
-  author = {{Van Hees}, Vincent T and  Sabia, Severine and Anderson, Kirstie N  and  Denton, Sarah J and  Oliver, James and  Catt, Michael and  Abell, Jesica G and  Kivimaki, Mika and  Trenell, Michael I and  Singh-Manoux, Archana},
+  author = {{Van Hees}, Vincent T. and  Sabia, Severine and Anderson, Kirstie N  and  Denton, Sarah J and  Oliver, James and  Catt, Michael and  Abell, Jesica G and  Kivimaki, Mika and  Trenell, Michael I and  Singh-Manoux, Archana},
   doi = {10.1371/journal.pone.0142533},
   journal = {PLoS One},
   volume = {10},
@@ -1870,7 +1868,7 @@ year = {1999}
 }
 
 @Article{Wichers2011,
-  author    = {Wichers, Marieke and Simons, C. J. P. and Kramer, I. M. A. and Hartmann, J. A. and Lothmann, C. and Myin-Germeys, I. and {Van Bemmel}, A. L. and Peeters, F. and Delespaul, Ph. and {Van Os}, J.},
+  author    = {Wichers, Marieke and Simons, C. J. P. and Kramer, I. M. A. and Hartmann, J. A. and Lothmann, C. and Myin-Germeys, Inez and {Van Bemmel}, A. L. and Peeters, F. and Delespaul, Ph. and {Van Os}, J.},
   title     = {{Momentary assessment technology as a tool to help patients with depression help themselves}},
   journal   = {Acta Psychiatrica Scandinavica},
   year      = {2011},
@@ -1930,7 +1928,7 @@ year = {1999}
 }
 
 
-@misc{wiki_Stationary_process,
+@misc{wikiStationary,
    author = "Wikipedia",
    title = "{Stationary process} --- {W}ikipedia{,} The Free Encyclopedia",
    year = "2018",
