--- a/packages.bib
+++ b/packages.bib
@@ -1,6 +1,6 @@
 @Manual{R-autovar,
     title = {autovar: Automated Vector Autoregression Model Creation},
-    author = {Ando Emerencia},
+    author = {Emerencia, Ando C.},
     year = {2018},
     note = {R package version 0.2-4},
 }
@@ -61,7 +61,7 @@
 
 @Manual{R-GGIR,
   title = {{GGIR}: Raw Accelerometer Data Analysis},
-  author = {Vincent T {Van Hees} and Zhou Fang and Jing Hua Zhao and Joe Heywood and Evgeny Mirkes and Severine Sabia and Jairo H Migueles},
+  author = {Vincent T. {Van Hees} and Zhou Fang and Jing Hua Zhao and Joe Heywood and Evgeny Mirkes and Severine Sabia and Jairo H Migueles},
   year = {2018},
   note = {R package version 1.5-24},
   doi = {10.5281/zenodo.1051064},
